media/boom/css/boom/wysihtml5.less
span[contenteditable] {
	display: inline-block;
	min-width: 100px;
}

[data-wysihtml5-dialog="createBoomLink"] {
	position: fixed;
	left: 60px;
	top: 385px;
	background: #222;
}

[data-wysihtml5-dialog-action] {
	padding: 4px;
	color: #fff;
	cursor: pointer;
}

.b-button.wysihtml5-command-active {
	background: #468017;

	&:hover, &:focus, &:active {
		background: #468017;
	}
}

